--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-next": "14.2.10",
     "eslint-config-prettier": "^9.1.0",
+    "playwright": "^1.52.0",
     "prettier": "^3.3.1",
     "prettier-eslint": "^16.3.0",
     "prisma": "^6.6.0",
