--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,8 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
-
+          node-version: '18.18.0'
+          
       - run: npm ci --legacy-peer-deps
 
       - run: curl https://install.meteor.com/ | sh
