--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,8 +5,13 @@ on:
     branches:
       - main
 
+defaults:
+  run:
+    working-directory: ./
+
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
@@ -22,8 +27,8 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: '18.18.0'
-          
+          node-version: '>=18.18.0'
+
       - run: npm ci --legacy-peer-deps
 
       - run: curl https://install.meteor.com/ | sh
