--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,8 @@ jobs:
 
       - run: curl https://install.meteor.com/ | sh
 
+      - run: meteor npm run lint -- --fix
+
       - name: Run Meteor commands
         shell: bash -l {0}
         run: |
