--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.9.4",
     "multiselect-react-dropdown": "^2.0.25",
     "next": "^14.2.24",
     "next-auth": "^4.24.7",
